# seoCrawler

./: .gitignore  README.md  WINDOWS_TESTING.md  crawler.config.json  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: windows-build.yml
scripts/: build-sidecar.mjs  generate-icons.mjs
sidecar/: main.mjs  package.json
src/: App.tsx  engineClient.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
